<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->

    <item android:title="@string/nav_title_shop">
        <menu>
            <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_view_module_black_24dp"
                android:title="@string/nav_categories" />
            <item
                android:id="@+id/nav_catalog"
                android:icon="@drawable/ic_shopping_black_24dp"
                android:title="@string/nav_catalog" />
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_cart_black_24dp"
                android:title="@string/nav_cart" />
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_black_24dp"
                android:title="@string/nav_account" />
        </menu>
    </item>

    <item android:title="@string/nav_title_info">
        <menu>
            <item
                android:id="@+id/nav_delivery"
                android:icon="@drawable/ic_truck_delivery_black_24dp"
                android:title="@string/nav_delivery" />
        </menu>
    </item>

</menu>
