<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_small">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="6dp"
                android:text="@string/personal_info"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/edit_personal_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/product_image"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:src="@drawable/ic_mode_edit_black_18px" />

        </RelativeLayout>

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_email" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_phone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/delivery_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/delivery_address"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/edit_delivery_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/product_image"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:src="@drawable/ic_mode_edit_black_18px" />

        </RelativeLayout>

        <TextView
            android:id="@+id/street_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_street" />

        <TextView
            android:id="@+id/city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_city" />

        <TextView
            android:id="@+id/country_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_country" />

        <TextView
            android:id="@+id/zipcode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_zipcode" />

    </LinearLayout>

</LinearLayout>